Fixed squid icon problem

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   <section id="main" class="flex">
     <div id="background-left">
       <div id="logo-text">
-        <img src="/img/squid.png" alt="/">
+        <img src="img/squid.png" alt="/">
         <p id="text-squid">Squid Game</p>
       </div>
     </div>
